# tokenpdf

./: .gitignore  CREDITS.md  LICENSE  MANIFEST.in  README.md  changelog.md  example.toml  main.py  post_install.py  pyproject.toml  requirements.in  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: conf.py  config.rst  index.rst  modules.rst  tokenpdf.canvas.rst  tokenpdf.filters.rst  tokenpdf.layouts.rst  tokenpdf.maps.rst  tokenpdf.rst  tokenpdf.systems.rst  tokenpdf.token.rst  tokenpdf.utils.rst
requirements/: core.txt  cpu.txt  dev.txt  full-gpu.txt  full.txt  full_base.txt  gpu.txt  pdf-all.txt  pdf-pr.txt  pdf-qt.txt  pdf-rl.txt  pdf.txt
requirements/source/: core.in  cpu.in  dev.in  full-gpu.in  full.in  full_base.in  gpu.in  pdf-all.in  pdf-pr.in  pdf-qt.in  pdf-rl.in  pdf.in  svg.in
scripts/deploy/: download_bins.py  package.py  requirements.py
scripts/docs/: create.py  credits.py  update.py
test/: test_canvas.py
tokenpdf/: __init__.py  __main__.py  flow.py  image.py  resources.py
tokenpdf/canvas/: __init__.py  canvas.py  command_conversion.py  htmlpdfwrapper.py  reportlab.py  resvgconverter.py  rsvgconverter.py  svghtmlwrapper.py  svgpdfwrapper.py  svgwrite.py
tokenpdf/data/: example.toml
tokenpdf/filters/: __init__.py  foreground.py  image_filter.py
tokenpdf/layouts/: __init__.py  greedy.py  layout.py  rectpack.py
tokenpdf/maps/: __init__.py  map.py  mapper.py  simple.py
tokenpdf/pipeline/: canvas.py  layout.py  post.py  tokens.py  workflow.py
tokenpdf/systems/: __init__.py  system.py
tokenpdf/token/: __init__.py  (+4 more)
(+17 files in other folders)
